[fix] q-mbti clicked overlap

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -34,6 +34,8 @@
 }
 
 .btn {
+  outline: none;
+  border: none;
   height: 2.5rem;
   margin: 1.5rem;
   color: white;
